# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.639 2006/06/28 12:48:22 wolf31o2 Exp $

  28 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> arch/ppc.py,
  arch/x86.py:
  Fixed invocation of linux32 for x86 and ppc.  This is for bug #138080.

  22 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Fix a problem where catalyst was creating an initial list, then putting that
  list inside another. Thanks to Andrew Gaffney <agaffney@gentoo.org> for
  pointing it out and for the fix. This is for bug #136351.

  22 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/unmerge.sh:
  Removing loop for unmerge, as it didn't actually solve anything and the
  portage team has helped us out by reverting the behavior that caused this
  change in the first place.

  21 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  modules/netboot2_target.py, modules/stage1_target.py,
  targets/netboot2/netboot2-copyfile.sh, targets/support/pre-kmerge.sh:
  Added two patches from Joshua Kinard <kumba@gentoo.org> to fix stage1 not
  having /proc mounted during the preclean stage and also to clean up the
  netboot2 code. This is 2.0_rc48.

  20 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/unmerge.sh:
  Change our unmerge from being a single unmerge to a loop, to work around an
  unexpected change in portage 2.1's unmerge processing.

  19 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Fixed a problem where we were putting the kernel name in twice and causing
  and error when using grub as a bootloader. This is for bug #137252.

  15 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Added a second pass to the alpha bootloader setup to create aboot items for
  serial console for bug #133457.

  12 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>