@@ -1,5 +1,12 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.639 2006/06/28 12:48:22 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.640 2006/06/28 12:51:43 wolf31o2 Exp $
+
+  28 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  modules/generic_stage_target.py, modules/livecd_stage2_target.py,
+  targets/support/filesystem-functions.sh:
+  Added two patches from Joshua Kinard from bug #138255 to fix livecd/fsops
+  and also to remove some redundant values from livecd-stage2's valid_values.
+  This is 2.0_rc49.
 
   28 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> arch/ppc.py,
   arch/x86.py:
